--- a/Technical Doc Page/CSS/styles.css
+++ b/Technical Doc Page/CSS/styles.css
@@ -9,6 +9,13 @@
 }
 
 h1 {
+  font-size:30px;
+  font-weight:800;
+  margin:10px 10px 35px 200px;
+  padding: 0px 10px;
+}
+
+h2 {
   font-weight: 800;
 }
 
@@ -43,7 +50,7 @@ h1 {
 }
 
 #main-doc {
-  margin:90px 10px 10px;
+  margin:10px 10px 10px;
 }
 
 .main-section {
